--- a/frontend/src/main/webapp/index.xhtml
+++ b/frontend/src/main/webapp/index.xhtml
@@ -1,11 +1,59 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
     <title>Products</title>
+    <style>
+        body { font-family: Arial, sans-serif; margin: 20px; }
+        table { border-collapse: collapse; width: 100%; margin-top: 20px; }
+        th, td { border: 1px solid #ddd; padding: 12px; text-align: left; }
+        th { background-color: #f2f2f2; font-weight: bold; }
+        tr:nth-child(even) { background-color: #f9f9f9; }
+        .price { text-align: right; font-weight: bold; }
+        .category { background-color: #e7f3ff; border-radius: 4px; padding: 4px 8px; }
+        h1 { color: #333; }
+        .header-info { margin-bottom: 20px; color: #666; }
+    </style>
 </h:head>
 <h:body>
     <h1>Product Management</h1>
-    <p>JSF Frontend placeholder</p>
+    <div class="header-info">
+        <p>JSF Frontend displaying products from Spring Boot backend API</p>
+        <p>Total products: #{productBean.products.size()}</p>
+    </div>
+    
+    <h:dataTable value="#{productBean.products}" var="product" 
+                 styleClass="products-table" 
+                 rendered="#{not empty productBean.products}">
+        <h:column>
+            <f:facet name="header">ID</f:facet>
+            #{product.id}
+        </h:column>
+        <h:column>
+            <f:facet name="header">Name</f:facet>
+            <strong>#{product.name}</strong>
+        </h:column>
+        <h:column>
+            <f:facet name="header">Description</f:facet>
+            #{product.description}
+        </h:column>
+        <h:column>
+            <f:facet name="header">Price</f:facet>
+            <span class="price">$#{product.price}</span>
+        </h:column>
+        <h:column>
+            <f:facet name="header">Category</f:facet>
+            <span class="category">#{product.category}</span>
+        </h:column>
+        <h:column>
+            <f:facet name="header">Status</f:facet>
+            #{product.active ? 'Active' : 'Inactive'}
+        </h:column>
+    </h:dataTable>
+    
+    <h:panelGroup rendered="#{empty productBean.products}">
+        <p style="color: red; font-weight: bold;">No products found. Check backend connection.</p>
+    </h:panelGroup>
 </h:body>
 </html>
