feat: add basic JWT security and login

--- a/frontend/src/main/webapp/index.xhtml
+++ b/frontend/src/main/webapp/index.xhtml
@@ -21,6 +21,7 @@
     <div class="header-info">
         <p>JSF Frontend displaying products from Spring Boot backend API</p>
         <p>Total products: #{productBean.products.size()}</p>
+        <p><a href="login.xhtml">Login</a></p>
     </div>
     
     <h:dataTable value="#{productBean.products}" var="product" 
